syntax = "proto3";

package v1.nfpbv1;

import "v1/nfpb/msg_language.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/nfpb;nfpbv1";

message UpdateLanguageRequest {
  int32           LanguageID   = 1;
  optional string LanguageCode = 2;
  optional string LanguageName = 3;
}

message UpdateLanguageResponse {
  LanguageResponse languages = 1;
}